# MarkdownTerminalRender

./: CMakeLists.txt  README.md  main.c  mdrender.h  string_buffer.h  styles.h  stylestack.h
include/: mdrender.h  string_buffer.h  styles.h  stylestack.h
python_mdtr/: main.py  mdrender.c  mdrender.h  mdtr.py
src/: main.c  mdrender.c  string_buffer.c  styles.c  stylestack.c
